# aws-serverless-data-pipeline

./: .gitignore  README.md  sam_steps.md  samconfig.toml  template.yaml
api/: .gitignore  README.md  pyproject.toml
api/api/: app.py  cli.py  delta.py  fs.py  mars_api.py
poller/: README.md  pyproject.toml  requirements.txt
poller/poller/: cli.py  fs.py  github.py  handle.py  mars_api.py
updater/: .gitignore  Dockerfile  README.md  poetry.toml  pyproject.toml  requirements.txt
updater/updater/: aws.py  cli.py  delta.py  handle.py  logger.py  reader.py  sandbox.py  writer.py
