[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Tomi Kasurinen <tomi.kasurinen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = {extras = ["deltalake"], version = "^0.16.8"}
flask = "^2.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
