[tool.poetry]
name = "updater"
version = "0.1.0"
description = ""
authors = ["Tomi Kasurinen <tomi.kasurinen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
polars = {extras = ["deltalake"], version = "^0.16.8"}
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 108
