[tool.poetry]
name = "updater"
version = "0.1.0"
description = ""
authors = ["Tomi Kasurinen <tomi.kasurinen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
deltalake = "^0.7.0"
polars = {extras = ["deltalake"], version = "^0.16.9"}
aws-lambda-powertools = "^2.15.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
boto3 = "^1.26.137"
boto3-stubs = {extras = ["s3"], version = "^1.26.137"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 108
